Исправлены ошибки в тестах для методов изменения и обновления заказов